finished project descriptions and link buttons.

--- a/index.html
+++ b/index.html
@@ -287,6 +287,10 @@
             <li class="projects-container__info--links-link-btn">
                 <a href="https://github.com/mklaso/weather-app">Github</a>
             </li>
+
+            <li class="projects-container__info--links-link-btn">
+                <a href="#">View Demo</a>
+            </li>
           </ul>
         </div>
       </div>
@@ -295,7 +299,7 @@
       <div class="projects-container project-2">
         <div class="projects-container__info">
           <h3 class="heading--3">Sujoku</h3>
-          <h5 class="heading--5">A web based sudoku game with a solver that is able to solve even the hardest puzzle in under a second. Capable of generating puzzles of varying difficulties, move hinting, and creating custom sudoku puzzles.</h5>
+          <h5 class="heading--5">A web based sudoku game with a solver that is able to solve even the hardest puzzle in under a second. Capable of generating puzzles of varying difficulties, move hinting, and the ability to create your own sudoku puzzles.</h5>
           <ul class="projects-container__info--skills">
               <li class="projects-container__info--skills-item">HTML</li>
               <li class="projects-container__info--skills-item">CSS</li>
@@ -306,6 +310,9 @@
             <!-- insert github link / live website link -->
             <li class="projects-container__info--links-link-btn">
                 <a href="https://github.com/mklaso/sujoku">Github</a>
+            </li>
+            <li class="projects-container__info--links-link-btn">
+                <a href="https://mklaso.github.io/sujoku/">View Live</a>
             </li>
           </ul>
 
@@ -318,7 +325,7 @@
         <div class="projects-container__pictures"></div>
         <div class="projects-container__info">
           <h3 class="heading--3">Othello</h3>
-          <h5 class="heading--5">Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio, quo nulla.</h5>
+          <h5 class="heading--5">Recreated the game of Othello with a GUI. Supports single player, multiplayer, player vs bot and bot vs bot. Features include move hinting, undoing moves, adjusting the difficulty of bots, and more!</h5>
           <ul class="projects-container__info--skills">
               <li class="projects-container__info--skills-item">Java</li>
               <li class="projects-container__info--skills-item">JavaFX</li>
@@ -328,6 +335,10 @@
             <li class="projects-container__info--links-link-btn">
                 <a href="https://github.com/mklaso/weather-app">Github</a>
             </li>
+
+            <li class="projects-container__info--links-link-btn">
+                <a href="#">View Demo</a>
+            </li>
           </ul>
         </div>
       </div>
@@ -335,7 +346,7 @@
       <div class="projects-container project-4">
         <div class="projects-container__info">
           <h3 class="heading--3">Face Detection</h3>
-          <h5 class="heading--5">Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio, quo nulla.</h5>
+          <h5 class="heading--5">A web app that detects faces from user uploaded images through the use of Clarifai's face detection API. Ranks users by the number of photos they have uploaded on the site.</h5>
           <ul class="projects-container__info--skills">
               <li class="projects-container__info--skills-item">React</li>
               <li class="projects-container__info--skills-item">Node</li>
@@ -346,6 +357,10 @@
             <!-- insert github link / live website link -->
             <li class="projects-container__info--links-link-btn">
                 <a href="https://github.com/mklaso/face-recognition">Github</a>
+            </li>
+
+            <li class="projects-container__info--links-link-btn">
+                <a href="#">View Live</a>
             </li>
           </ul>
         </div>
