change to skills section layout + margin adjustments everywhere.

--- a/index.html
+++ b/index.html
@@ -157,7 +157,6 @@
       <h2 class="heading--2">skillset</h2>
 
       <div class="skills__whole">
-        <h3 class="heading--3 u-margin-bottom-very-small">Languages</h3>
         <div class="skills__container">
           <ul class="skills__flex">
             <li class="skills__details">
@@ -194,14 +193,7 @@
               </svg>
               <p class="skills__details--text">Javascript</p>
             </li>
-          </ul>
-        </div>
 
-        <h3 class="heading--3 u-margin-bottom-very-small">
-          Frameworks & Tools
-        </h3>
-        <div class="skills__container">
-          <ul class="skills__flex">
             <li class="skills__details">
               <svg class="skills__details--icon">
                 <use xlink:href="resources/sprite.svg#icon-sass"></use>
@@ -271,7 +263,7 @@
     <!-- 4. projects i've made section -->
     <section class="projects" id="projects">
       <h2 class="heading--2">my projects</h2>
-      <div class="projects-container project-1">
+      <div class="projects-container projects-container--project-1">
         <div class="projects-container__pictures"></div>
         <div class="projects-container__info">
           <h3 class="heading--3">Weather App</h3>
