added project screenshots + small changes to skills section.

--- a/index.html
+++ b/index.html
@@ -264,7 +264,9 @@
     <section class="projects" id="projects">
       <h2 class="heading--2">my projects</h2>
       <div class="projects-container projects-container--project-1">
-        <div class="projects-container__pictures"></div>
+        <div class="projects-container__pictures projects-container__pictures-1">
+            <!-- <img src="resources/project-1d.png" alt="Site logo" class="projects-container__pictures--picture-1" /> -->
+        </div>
         <div class="projects-container__info">
           <h3 class="heading--3">Weather App</h3>
           <h5 class="heading--5">A weather forecast GUI that retrieves accurate weather location information from the OpenWeatherMap API. Capable of displaying both a current weather forecast, as well as a 5 day forecast, and supports saving up to 10 locations.</h5>
@@ -275,7 +277,6 @@
               <li class="projects-container__info--skills-item">SQLite</li>
           </ul>
           <ul class="projects-container__info--links">
-            <!-- insert github link / live website link -->
             <li class="projects-container__info--links-link-btn">
                 <a href="https://github.com/mklaso/weather-app">Github</a>
             </li>
@@ -299,7 +300,6 @@
               <li class="projects-container__info--skills-item">Javascript</li>
           </ul>
           <ul class="projects-container__info--links">
-            <!-- insert github link / live website link -->
             <li class="projects-container__info--links-link-btn">
                 <a href="https://github.com/mklaso/sujoku">Github</a>
             </li>
@@ -309,12 +309,15 @@
           </ul>
 
         </div>
-        <div class="projects-container__pictures"></div>
+        <div class="projects-container__pictures projects-container__pictures-2">
+        </div>
         </div>
       </div>
 
       <div class="projects-container project-3">
-        <div class="projects-container__pictures"></div>
+        <div class="projects-container__pictures projects-container__pictures-3">
+
+        </div>
         <div class="projects-container__info">
           <h3 class="heading--3">Othello</h3>
           <h5 class="heading--5">Recreated the game of Othello with a GUI. Supports single player, multiplayer, player vs bot and bot vs bot. Features include move hinting, undoing moves, adjusting the difficulty of bots, and more!</h5>
@@ -356,7 +359,9 @@
             </li>
           </ul>
         </div>
-        <div class="projects-container__pictures"></div>
+        <div class="projects-container__pictures projects-container__pictures-4">
+            <!-- <img src="resources/project-4c.png" alt="Site logo" class="projects-container__pictures--picture-4" /> -->
+        </div>
         </div>
       </div>
     </section>
