finished about section + other small changes.

--- a/index.html
+++ b/index.html
@@ -131,25 +131,32 @@
 
     <!-- 2. about me section -->
     <section class="about" id="about">
-      <h2 class="heading--2">about me</h2>
-      <p class="u-margin-top-medium">
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic ipsa
-        aspernatur consequuntur, laudantium dolore doloremque itaque eligendi
-        aliquid ad, rem neque. Cum veniam vitae laborum in molestias impedit
-        iste modi?
-      </p>
-      <p class="u-margin-top-small">
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Eum doloribus
-        earum odio, voluptate quae adipisci eius voluptatum, accusamus aliquid
-        mollitia autem beatae, rerum sequi excepturi voluptas eos quam nulla
-        alias.
-      </p>
-      <p class="u-margin-top-small">
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo, nesciunt.
-        Dolorum minus officiis eum corrupti suscipit qui asperiores voluptatum
-        beatae exercitationem ratione earum nam blanditiis, natus accusantium
-        laudantium quasi repudiandae?
-      </p>
+        <div class="about-text">
+            <h2 class="heading--2">about me</h2>
+            <p class="u-margin-top-medium">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic ipsa
+                aspernatur consequuntur, laudantium dolore doloremque itaque eligendi
+                aliquid ad, rem neque. Cum veniam vitae laborum in molestias impedit
+                iste modi?
+            </p>
+            <p class="u-margin-top-small">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Eum doloribus
+                earum odio, voluptate quae adipisci eius voluptatum, accusamus aliquid
+                mollitia autem beatae, rerum sequi excepturi voluptas eos quam nulla
+                alias.
+            </p>
+            <p class="u-margin-top-small">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo, nesciunt.
+                Dolorum minus officiis eum corrupti suscipit qui asperiores voluptatum
+                beatae exercitationem ratione earum nam blanditiis, natus accusantium
+                laudantium quasi repudiandae?
+            </p>
+        </div>
+        <div class="about-pictures">
+            <div class="about-pictures about-pictures-picture-1"></div>
+            <div class="about-pictures about-pictures-picture-2"></div>
+            <div class="about-pictures about-pictures-picture-3"></div>
+        </div>
     </section>
 
     <!-- 3. skills section -->
