changes to projects section + fix to spacing.

--- a/index.html
+++ b/index.html
@@ -131,31 +131,33 @@
 
     <!-- 2. about me section -->
     <section class="about" id="about">
-        <div class="about-text">
-            <h2 class="heading--2">about me</h2>
-            <p class="u-margin-top-medium">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic ipsa
-                aspernatur consequuntur, laudantium dolore doloremque itaque eligendi
-                aliquid ad, rem neque. Cum veniam vitae laborum in molestias impedit
-                iste modi?
-            </p>
-            <p class="u-margin-top-small">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Eum doloribus
-                earum odio, voluptate quae adipisci eius voluptatum, accusamus aliquid
-                mollitia autem beatae, rerum sequi excepturi voluptas eos quam nulla
-                alias.
-            </p>
-            <p class="u-margin-top-small">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo, nesciunt.
-                Dolorum minus officiis eum corrupti suscipit qui asperiores voluptatum
-                beatae exercitationem ratione earum nam blanditiis, natus accusantium
-                laudantium quasi repudiandae?
-            </p>
-        </div>
-        <div class="about-pictures">
-            <div class="about-pictures about-pictures-picture-1"></div>
-            <div class="about-pictures about-pictures-picture-2"></div>
-            <div class="about-pictures about-pictures-picture-3"></div>
+        <h2 class="heading--2">about me</h2>
+        <div class="about-container">
+            <div class="about-container--text">
+                <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic ipsa
+                    aspernatur consequuntur, laudantium dolore doloremque itaque eligendi
+                    aliquid ad, rem neque. Cum veniam vitae laborum in molestias impedit
+                    iste modi?
+                </p>
+                <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Eum doloribus
+                    earum odio, voluptate quae adipisci eius voluptatum, accusamus aliquid
+                    mollitia autem beatae, rerum sequi excepturi voluptas eos quam nulla
+                    alias.
+                </p>
+                <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo, nesciunt.
+                    Dolorum minus officiis eum corrupti suscipit qui asperiores voluptatum
+                    beatae exercitationem ratione earum nam blanditiis, natus accusantium
+                    laudantium quasi repudiandae?
+                </p>
+            </div>
+            <div class="about-container--pictures">
+                <div class="about-container--pictures about-container--pictures-picture-1"></div>
+                <div class="about-container--pictures about-container--pictures-picture-2"></div>
+                <div class="about-container--pictures about-container--pictures-picture-3"></div>
+            </div>
         </div>
     </section>
 
@@ -284,11 +286,11 @@
               <li class="projects-container__info--skills-item">SQLite</li>
           </ul>
           <ul class="projects-container__info--links">
-            <li class="projects-container__info--links-link-btn">
+            <li class="projects-container__info--links-link-btn projects-container__info--links-link-btn-even">
                 <a href="https://github.com/mklaso/weather-app">Github</a>
             </li>
 
-            <li class="projects-container__info--links-link-btn">
+            <li class="projects-container__info--links-link-btn projects-container__info--links-link-btn-even">
                 <a href="#">View Demo</a>
             </li>
           </ul>
@@ -334,11 +336,11 @@
           </ul>
           <ul class="projects-container__info--links">
             <!-- insert github link / live website link -->
-            <li class="projects-container__info--links-link-btn">
+            <li class="projects-container__info--links-link-btn projects-container__info--links-link-btn-even">
                 <a href="https://github.com/mklaso/weather-app">Github</a>
             </li>
 
-            <li class="projects-container__info--links-link-btn">
+            <li class="projects-container__info--links-link-btn projects-container__info--links-link-btn-even">
                 <a href="#">View Demo</a>
             </li>
           </ul>
