--- a/index.html
+++ b/index.html
@@ -135,22 +135,13 @@
         <div class="about-container">
             <div class="about-container--text">
                 <p>
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic ipsa
-                    aspernatur consequuntur, laudantium dolore doloremque itaque eligendi
-                    aliquid ad, rem neque. Cum veniam vitae laborum in molestias impedit
-                    iste modi?
+                    I'm a third year student at Wilfrid Laurier University currently studying Computer Science, and I have a passion for creating clean looking designs. I'm most interested in software development and full stack web development at the moment.
                 </p>
                 <p>
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Eum doloribus
-                    earum odio, voluptate quae adipisci eius voluptatum, accusamus aliquid
-                    mollitia autem beatae, rerum sequi excepturi voluptas eos quam nulla
-                    alias.
+                    As of right now, I'm mainly focusing on learning more with React, transitioning from JavaScript to using TypeScript, and improving my design skills. In the future I'd like to get into and learn Go.
                 </p>
                 <p>
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo, nesciunt.
-                    Dolorum minus officiis eum corrupti suscipit qui asperiores voluptatum
-                    beatae exercitationem ratione earum nam blanditiis, natus accusantium
-                    laudantium quasi repudiandae?
+                    Some of my other interests outside of computer science and coding are snowboarding, basketball, video games and more!
                 </p>
             </div>
             <div class="about-container--pictures">
@@ -381,10 +372,10 @@
         <div class="contact__text">
           <h2 class="heading--2">contact me</h2>
           <p>
-            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Voluptas
-            tempore commodi excepturi quae, eos cum molestias fugit esse fuga
-            itaque explicabo, dicta similique obcaecati. Necessitatibus,
-            eligendi. Similique sint distinctio minima?
+              Thanks for checking out my portfolio!
+          </p>
+          <p>
+              Feel free to send me a message if you'd like to talk about any of my projects, possible job opportunities, or really anything that comes to mind!
           </p>
           <p>
             contact me at:
