some media queries done.

--- a/index.html
+++ b/index.html
@@ -135,13 +135,13 @@
         <div class="about-container">
             <div class="about-container--text">
                 <p>
-                    I'm a third year student at Wilfrid Laurier University currently studying Computer Science, and I have a passion for creating clean looking designs. I'm most interested in software development and full stack web development at the moment.
+                    I'm a third year student at Wilfrid Laurier University currently studying Computer Science, and I have a passion for creating clean looking designs. I'm most interested in software engineering and full stack web development at the moment.
                 </p>
                 <p>
                     As of right now, I'm mainly focusing on learning more with React, transitioning from JavaScript to using TypeScript, and improving my design skills. In the future I'd like to get into and learn Go.
                 </p>
                 <p>
-                    Some of my other interests outside of computer science and coding are snowboarding, basketball, video games and more!
+                    Some of my other interests outside of development are snowboarding, basketball, video games and more!
                 </p>
             </div>
             <div class="about-container--pictures">
