--- a/index.html
+++ b/index.html
@@ -18,6 +18,47 @@
   </head>
 
   <body class="container">
+
+    <!-- nav for smaller screen sizes/mobile -->
+<!-- 
+    <div class="navigation">
+      <input type="checkbox" class="navigation__checkbox" id="navi-toggle" />
+
+      <label for="navi-toggle" class="navigation__button"
+        ><span class="navigation__icon">&nbsp;</span></label
+      >
+
+      <nav class="navigation__nav">
+        <ul class="navigation__list">
+            <li class="navigation__item">
+            <a href="#"
+              ><p>Home</p></a
+            >
+          </li>
+          <li class="navigation__item">
+            <a href="#about"
+              ><p>About</p></a
+            >
+          </li>
+          <li class="navigation__item">
+            <a href="#skills"
+              ><p>Skills</p></a
+            >
+          </li>
+          <li class="navigation__item">
+            <a href="#projects"
+              ><p>Projects</p></a
+            >
+          </li>
+          <li class="navigation__item">
+            <a href="#contact"
+              ><p>Contact Me</p>
+            </a>
+          </li>
+        </ul>
+      </nav>
+    </div> -->
+    
     <!-- 0. sidebar/site navigation section -->
     <div class="sidebar">
       <div class="sidebar__info">
@@ -106,7 +147,7 @@
     <!-- 1. intro/header section -->
 
     <header class="header" id="header">
-      <div class="intro u-margin-bottom-large">
+      <div class="header__intro u-margin-bottom-large">
         <span class="span-first">Hi,</span>
         <h1 class="heading--1">
           I'm <span class="letter-highlight">M</span>artin<span
@@ -115,7 +156,7 @@
           >
         </h1>
         <span class="span-second"
-          >cs student & aspiring full stack developer</span
+          >aspiring software engineer</span
         >
       </div>
       <div class="header__icon-container">
@@ -131,11 +172,12 @@
 
     <!-- 2. about me section -->
     <section class="about" id="about">
-        <h2 class="heading--2">about me</h2>
         <div class="about-container">
+             
             <div class="about-container--text">
+                <h2 class="heading--2 u-margin-bottom-very-small">about me</h2>
                 <p>
-                    I'm a third year student at Wilfrid Laurier University currently studying Computer Science, and I have a passion for creating clean looking designs. I'm most interested in software engineering and full stack web development at the moment.
+                    I'm a third year student at Wilfrid Laurier University currently studying Computer Science. I have a passion for creating clean looking designs. I'm most interested in software engineering and full stack web development at the moment.
                 </p>
                 <p>
                     As of right now, I'm mainly focusing on learning more with React, transitioning from JavaScript to using TypeScript, and improving my design skills. In the future I'd like to get into and learn Go.
