added nav component for smaller screen sizes.

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   <body class="container">
 
     <!-- nav for smaller screen sizes/mobile -->
-<!-- 
+
     <div class="navigation">
       <input type="checkbox" class="navigation__checkbox" id="navi-toggle" />
 
@@ -57,7 +57,7 @@
           </li>
         </ul>
       </nav>
-    </div> -->
+    </div>
     
     <!-- 0. sidebar/site navigation section -->
     <div class="sidebar">
