html description change & compressed css.

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
       content="NYwuZk9a5iUuHs7NP8by8GoupFTZij14bwxCRpuE8fU"
     />
     <title>Martin Klasninovski</title>
+    <meta name="description" content="Hi, my name is Martin Klasninovski, I'm a CS student and aspiring software engineer.">
     <link rel="stylesheet" type="text/css" href="css/style.css" />
     <link
       href="https://fonts.googleapis.com/css2?family=Inter:wght@200;300;400;500;600;700&display=swap"
