--- a/index.html
+++ b/index.html
@@ -178,13 +178,13 @@
             <div class="about-container--text">
                 <h2 class="heading--2 u-margin-bottom-very-small">about me</h2>
                 <p>
-                    I'm a third year student at Wilfrid Laurier University currently studying Computer Science. I have a passion for creating clean looking designs. I'm most interested in software engineering and full stack web development at the moment.
+                    I'm a third year Computer Science student at Wilfrid Laurier University. At the moment, I'm most interested in software engineering, full stack web development, and more recently - creating clean looking designs.
                 </p>
                 <p>
-                    As of right now, I'm mainly focusing on learning more with React, transitioning from JavaScript to using TypeScript, and improving my design skills. In the future I'd like to get into and learn Go.
+                    Currently, I'm focusing on enhancing my skills with React, transitioning from JavaScript to learning TypeScript, and further improving my design skills. Some day in the future, I'd like to pick up and learn Go.
                 </p>
                 <p>
-                    Some of my other interests outside of development are snowboarding, basketball, video games and more!
+                    Outside of development, some of my other interests are snowboarding, basketball, video games, and more!
                 </p>
             </div>
             <div class="about-container--pictures">
