added updated resume.

--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
           </svg>
         </a>
 
-        <a href="resources/resume.pdf" target="_blank">
+        <a href="resources/martin_klasninovski_resume.pdf" target="_blank">
           <svg class="sidebar__icon sidebar__sub-container--icon">
             <use xlink:href="resources/sprite.svg#icon-document-text"></use>
           </svg>
