minor updates/text changes.

--- a/index.html
+++ b/index.html
@@ -305,13 +305,13 @@
 
     <!-- 4. projects i've made section -->
     <section class="projects" id="projects">
-      <h2 class="heading--2">my projects</h2>
+      <h2 class="heading--2">some projects i've done</h2>
       <div class="projects-container projects-container--project-1">
         <div class="projects-container__pictures projects-container__pictures-1">
             <!-- <img src="resources/project-1d.png" alt="Site logo" class="projects-container__pictures--picture-1" /> -->
         </div>
         <div class="projects-container__info">
-          <h3 class="heading--3">Weather App</h3>
+          <h3 class="heading--3">Weather Forecast</h3>
           <h5 class="heading--5">A weather forecast GUI that retrieves accurate weather location information from the OpenWeatherMap API. Capable of displaying both a current weather forecast, as well as a 5 day forecast, and supports saving up to 10 locations.</h5>
           <ul class="projects-container__info--skills">
               <li class="projects-container__info--skills-item">Java</li>
@@ -334,7 +334,7 @@
 
       <div class="projects-container project-2">
         <div class="projects-container__info">
-          <h3 class="heading--3">Sujoku</h3>
+          <h3 class="heading--3">Sudoku Solver</h3>
           <h5 class="heading--5">A web based sudoku game with a solver that is able to solve even the hardest puzzle in under a second. Capable of generating puzzles of varying difficulties, move hinting, and the ability to create your own sudoku puzzles.</h5>
           <ul class="projects-container__info--skills">
               <li class="projects-container__info--skills-item">HTML</li>
