--- a/index.html
+++ b/index.html
@@ -147,7 +147,9 @@
         <div class="about-container">
              
             <div class="about-container--text">
-                <h2 class="heading--2 u-margin-bottom-very-small">about me</h2>
+              <div class="heading-block">
+                <h2 class="heading--2">about me</h2>
+              </div>
                 <p>
                     I'm a third year Computer Science student at Wilfrid Laurier University. At the moment, I'm most interested in software engineering, full stack web development, and creating clean looking designs.
                 </p>
@@ -168,7 +170,9 @@
 
     <!-- 3. skills section -->
     <section class="skills" id="skills">
-      <h2 class="heading--2">skillset</h2>
+      <div class="heading-block heading-block--2">
+        <h2 class="heading--2">skillset</h2>
+      </div>
 
       <div class="skills__whole">
         <div class="skills__container">
@@ -276,7 +280,9 @@
 
     <!-- 4. projects i've made section -->
     <section class="projects" id="projects">
-      <h2 class="heading--2">some projects i've done</h2>
+      <div class="heading-block">
+        <h2 class="heading--2">some of my projects</h2>
+      </div>
       <div class="projects-container projects-container--project-1">
         <div class="projects-container__pictures projects-container__pictures-1">
             <!-- <img src="resources/project-1d.png" alt="Site logo" class="projects-container__pictures--picture-1" /> -->
