add meta tags to site index html / small resume fix.

--- a/index.html
+++ b/index.html
@@ -9,7 +9,12 @@
       content="NYwuZk9a5iUuHs7NP8by8GoupFTZij14bwxCRpuE8fU"
     />
     <title>Martin Klasninovski</title>
-    <meta name="description" content="Hi, my name is Martin Klasninovski, I'm a CS student and aspiring software engineer.">
+    <meta name="description" content="Hi! I'm Martin Klasninovski - a CS student and aspiring software engineer.">
+    <meta name="title" property="og:title" content="Martin Klasninovski" />
+    <meta property="og:type" content="Website" />
+    <meta name="image" property="og:image" content="https://imgur.com/RVZY4k5" />
+    <meta name="description" property="og:description" content="Martin Klasninovski - Portfolio" />
+    <meta name="author" content="Martin Klasninovski" />
     <link rel="stylesheet" type="text/css" href="css/style.css" />
     <link
       href="https://fonts.googleapis.com/css2?family=Inter:wght@200;300;400;500;600;700&display=swap"
