fix img url in meta tag oops.

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <meta name="description" content="Hi! I'm Martin Klasninovski - a CS student and aspiring software engineer.">
     <meta name="title" property="og:title" content="Martin Klasninovski" />
     <meta property="og:type" content="Website" />
-    <meta name="image" property="og:image" content="https://imgur.com/RVZY4k5" />
+    <meta name="image" property="og:image" content="https://i.imgur.com/RVZY4k5.png" />
     <meta name="description" property="og:description" content="Martin Klasninovski - Portfolio" />
     <meta name="author" content="Martin Klasninovski" />
     <link rel="stylesheet" type="text/css" href="css/style.css" />
