fix missing resume at smaller screen sizes, update about 'me' section.

--- a/index.html
+++ b/index.html
@@ -61,6 +61,11 @@
               ><p>Contact Me</p>
             </a>
           </li>
+          <li class="navigation__item">
+            <a href="resources/martin_klasninovski_resume.pdf" target="_blank">
+              <p>Resume</p>
+            </a>
+          </li>
         </ul>
       </nav>
     </div>
@@ -165,13 +170,13 @@
                 <h2 class="heading--2">about me</h2>
               </div>
                 <p>
-                    I'm a third year Computer Science student at Wilfrid Laurier University. At the moment, I'm most interested in software engineering, full stack web development, and creating clean looking designs.
+                    I'm a teaching assistant and third year computer science student at Wilfrid Laurier University, with an interest in full stack web development, and creating clean looking designs. I am actively looking for Summer 2022 SWE Internship opportunities!
                 </p>
                 <p>
-                    Currently, I'm focusing on enhancing my skills with React, learning TypeScript, and further improving my design skills. Some day in the future, I'd like to pick up and learn Go.
+                    At the moment, I'm working on improving my skills with React, bettering my overall design skills, and further improving my algorithms knowledge. 
                 </p>
                 <p>
-                    Outside of development, some of my other interests are snowboarding, basketball, video games, and many more!
+                    Outside of development, some of my other interests include snowboarding, basketball, video games, and many more!
                 </p>
             </div>
             <div class="about-container--pictures">
