--- a/index.html
+++ b/index.html
@@ -187,7 +187,55 @@
         </div>
     </section>
 
-    <!-- 3. skills section -->
+    <!-- 3. experience section -->
+    <section class="experience" id="experience">
+      <div class="heading-block">
+        <h2 class="heading--2">experience</h2>
+      </div>
+
+      <div class="experience-container">
+        <div class="experience-work">
+          <div class="experience-work__img">
+            <img src="" alt="">
+          </div>
+          <div class="experience-work__content">
+            <h4 class="experience-work__content--company">CDK Global &nbsp;|&nbsp; Software Engineer Intern</h4>
+            <div class="experience-work__content--points">
+              <p> • Incoming SDE Intern on xxx and xxx team in Waterloo, Ontario; working with xx, xxx, xxx and xxx</p>
+            </div>
+          </div>
+        </div>
+
+        <div class="experience-work">
+          <div class="experience-work__img">
+            <img src="" alt="">
+          </div>
+          <div class="experience-work__content">
+            <h4 class="experience-work__content--company">Wilfrid Laurier University &nbsp;|&nbsp; Teaching Assistant</h4>
+            <div class="experience-work__content--points">
+              <p> • Supported 100+ students by leading weekly labs to reinforce fundamental programming concepts</p>
+              <p> • Aided in students’ success by answering questions and providing feedback on graded lab tasks</p>
+            </div>
+          </div>
+        </div>
+
+        <div class="experience-work">
+          <div class="experience-work__img">
+            <img src="" alt="">
+          </div>
+          <div class="experience-work__content">
+            <h4 class="experience-work__content--company">Dalvina Canada &nbsp;|&nbsp; Technical Assistant</h4>
+            <div class="experience-work__content--points">
+              <p> • Communicated with clients regarding orders, promotions, and for general inquiries on the products</p>
+              <p> • Maintained the front end of the company website through periodic updates to help promote newer products</p>
+              <p> •  Automated inventory updating and increased processing speed of client order forms by 40% with VBA</p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <!-- 4. skills section -->
     <section class="skills" id="skills">
       <div class="heading-block heading-block--2">
         <h2 class="heading--2">skillset</h2>
@@ -297,7 +345,7 @@
       </div>
     </section>               
 
-    <!-- 4. projects i've made section -->
+    <!-- 5. projects i've made section -->
     <section class="projects" id="projects">
       <div class="heading-block">
         <h2 class="heading--2">some of my projects</h2>
@@ -408,7 +456,7 @@
       </div>
     </section>
 
-    <!-- 5. contact me section -->
+    <!-- 6. contact me section -->
     <section class="contact" id="contact">
       <div class="contact__container">
         <p class="contact__heading">
@@ -447,9 +495,9 @@
       </div>
     </section>
 
-    <!-- 6. footer/copyright section -->
+    <!-- 7. footer/copyright section -->
     <footer class="footer">
-      <h4 class="heading--4">&copy; 2021 Martin Klasninovski</h4>
+      <h4 class="heading--4">&copy; 2022 Martin Klasninovski</h4>
     </footer>
   </body>
 </html>
